tests/cmp/dc-label-wrong-order.golden
Parse Error:
tests/cmp/dc-label-wrong-order.trp:1:27 unexpected token TokenDCRootInteg
